Перестроил немного логику.